--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -28,15 +28,12 @@ services:
       - netdatalib:/var/lib/netdata
       - netdatacache:/var/cache/netdata
 
-      - /:/host/root:ro,rslave
-      - /etc/passwd:/host/etc/passwd:ro
-      - /etc/group:/host/etc/group:ro
-      - /etc/localtime:/etc/localtime:ro
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /etc/os-release:/host/etc/os-release:ro
-      - /var/log:/host/var/log:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      {% for item in netdata_default_docker_volumes | default([]) %}
+      {% if item.comment is defined %}
+      # {{ item.comment }}
+      {% endif %}
+      - {{ item.volume | default(item) }}
+      {% endfor %}
 
       {% for item in netdata_extra_docker_volumes | default([]) %}
       {% if item.comment is defined %}
